Archive2/da/d4491d1b397082/output
main.cpp:8:12: error: '::main' must return 'int'
 auto main ()
            ^
