Archive2/da/d4491d1b397082/main.cpp
#include <iostream>

auto foo()
{
    return 0;
}

auto main ()
{
    std::cout << "OK I'm working" << std::endl;
    return 0;
}

